--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </address>
 
         <!-- Mobile Menu -->
-<div class="mobile-menu is-open" data-menu>
+<div class="mobile-menu" data-menu>
   <div class="mobile-menu-container">
 <button type="button" class="mobile-menu-button" data-menu-close>
   <svg class="mobule-button" width="8" height="8">
